fix sub schema size on mobile device

--- a/src/scss/_schemes.scss
+++ b/src/scss/_schemes.scss
@@ -301,7 +301,9 @@
       .scheme{
         margin: 0!important;
         li{
-          width: calc(100%/2);
+          @media #{$large-and-up} {
+            width: calc(100%/2);
+          }
 
           &:last-child {
             padding-bottom: 0 !important;
